# channel_license

./: DEVELOP_PLAN.md  README.md  pyproject.toml
src/channel_license/: __init__.py  api.py  app.py  config.py  database.py  fastapi_app.py  generate_password_hash.py  main.py  models.py
src/license/: __init__.py  api.py  app.py  exceptions.py  fastapi_app.py  logic.py  models.py
src/license/static/: app.js  index.html
tests/: test_api.py  test_auth.py  test_logic.py
