[project]
name = "channel-license"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "ailearncoder8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.44",
]

[project.scripts]
channel-license = "channel_license:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "fastapi>=0.121.1",
    "pytest>=9.0.0",
    "uvicorn>=0.38.0",
]
